# TTS

./: CMakeLists.txt  Dockerfile  LICENSE  README.md
explore/notebooks/: README.md  pyproject.toml  tts_tflite.ipynb
explore/notebooks/tests/: test_mysetp.py
src/main/: main.cpp
src/tts/: CMakeLists.txt  textIds.cpp  ttsAudio.cpp  ttsMain.cpp  ttsServices.cpp
src/tts/include/: textIds.hpp  ttsAudio.hpp  ttsMain.hpp  ttsService.hpp
